--- a/WebContent/contenido.xhtml
+++ b/WebContent/contenido.xhtml
@@ -1,3 +1,8 @@
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:p="http://primefaces.org/ui">
 					<p:panel>
 						<h:panelGrid columns="1" cellpadding="5">
     				<p:fileUpload fileUploadListener="#{GestorCargas.handleFileUpload}" mode="advanced" dragDropSupport="true"  
@@ -8,3 +13,4 @@
 						<p:inputText id="RES" value="#{GestorCargas.sCampo}" disabled="true" />
 						</h:panelGrid>
 					</p:panel>
+</html>
