--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -22,12 +22,14 @@
 						</p:submenu>
 						<p:submenu label="Comunidades">
 							<p:submenu label="Comunidades" icon="ui-icon-home">
-								<p:menuitem value="Cargar Comunidades"
+								<p:menuitem value="Cargar"
 									url="cargador.xhtml" icon="ui-icon-arrowthick-1-n" />
-								<p:menuitem value="Movimientos de Comunidades"
+								<p:menuitem value="Movimientos"
 									url="movimientoscomunidades.xhtml" icon="ui-icon-document" />
-								<p:menuitem value="Lista de Comunidades"
-									url="http://www.primefaces.org" icon="ui-icon-search" />
+								<p:menuitem value="Alta"
+									url="altacomunidad.xhtml" icon="ui-icon-arrowthick-1-e" />
+								<p:menuitem value="Gestion de Activos"
+									url="gestionactivoscomunidad.xhtml" icon="ui-icon-transferthick-e-w" />
 							</p:submenu>
 							<p:submenu label="Cuotas" icon="ui-icon-calculator">
 								<p:menuitem value="Cargar Cuotas"
