Funcionalidad Comunidades completa. Revisar navegacion en XTML.

--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -26,8 +26,8 @@
 									url="cargador.xhtml" icon="ui-icon-arrowthick-1-n" />
 								<p:menuitem value="Movimientos"
 									url="movimientoscomunidades.xhtml" icon="ui-icon-document" />
-								<p:menuitem value="Alta"
-									url="altacomunidad.xhtml" icon="ui-icon-arrowthick-1-e" />
+								<p:menuitem value="Registro"
+									url="registracomunidad.xhtml" icon="ui-icon-arrowthick-1-e" />
 								<p:menuitem value="Gestion de Activos"
 									url="gestionactivoscomunidad.xhtml" icon="ui-icon-transferthick-e-w" />
 							</p:submenu>
