--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -20,34 +20,37 @@
 							<p:menuitem value="Lista de Provisiones"
 								url="http://www.google.es" icon="ui-icon-search" />
 						</p:submenu>
+
 						<p:submenu label="Comunidades">
 							<p:submenu label="Comunidades" icon="ui-icon-home">
 								<p:menuitem value="Cargar"
 									url="cargador.xhtml" icon="ui-icon-arrowthick-1-n" />
 								<p:menuitem value="Movimientos"
 									url="movimientoscomunidades.xhtml" icon="ui-icon-document" />
-								<p:menuitem value="Registro"
+								<p:menuitem value="Registrar"
 									url="registracomunidad.xhtml" icon="ui-icon-arrowthick-1-e" />
-								<p:menuitem value="Gestion de Activos"
+								<p:menuitem value="Gestionar Activos"
 									url="gestionactivoscomunidad.xhtml" icon="ui-icon-transferthick-e-w" />
 							</p:submenu>
+							
 							<p:submenu label="Cuotas" icon="ui-icon-calculator">
 								<p:menuitem value="Cargar Cuotas"
 									url="http://www.noticias3d.com" icon="ui-icon-arrowthick-1-n" />
-								<p:menuitem value="Lista de Cuotas"
-									url="http://www.primefaces.org" icon="ui-icon-search" />
+								<p:menuitem value="Registrar"
+									url="registracuota.xhtml" icon="ui-icon-search" />
 							</p:submenu>
+							
 							<p:submenu label="Referencias catastrales" icon="ui-icon-script">
 								<p:menuitem value="Cargar Referencias"
 									url="http://www.noticias3d.com" icon="ui-icon-arrowthick-1-n" />
-								<p:menuitem value="Lista de Referencias"
-									url="http://www.primefaces.org" icon="ui-icon-search" />
+								<p:menuitem value="Registrar"
+									url="registrareferencia.xhtml" icon="ui-icon-search" />
 							</p:submenu>
 							<p:submenu label="Impuestos y tasas" icon="ui-icon-note">
 								<p:menuitem value="Cargar Impuestos"
 									url="http://www.noticias3d.com" icon="ui-icon-arrowthick-1-n" />
-								<p:menuitem value="Lista de Impuestos"
-									url="http://www.primefaces.org" icon="ui-icon-search" />
+								<p:menuitem value="Registrar"
+									url="registraimpuesto.xhtml" icon="ui-icon-search" />
 							</p:submenu>
 						</p:submenu>
 						<p:submenu label="Ref.">
