--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -25,19 +25,21 @@
 							<p:submenu label="Comunidades" icon="ui-icon-home">
 								<p:menuitem value="Cargar"
 									url="cargador.xhtml" icon="ui-icon-arrowthick-1-n" />
-								<p:menuitem value="Movimientos"
-									url="movimientoscomunidades.xhtml" icon="ui-icon-document" />
 								<p:menuitem value="Registrar"
 									url="registracomunidad.xhtml" icon="ui-icon-arrowthick-1-e" />
 								<p:menuitem value="Gestionar Activos"
 									url="gestionactivoscomunidad.xhtml" icon="ui-icon-transferthick-e-w" />
+								<p:menuitem value="Movimientos"
+									url="movimientoscomunidades.xhtml" icon="ui-icon-document" />
 							</p:submenu>
 							
 							<p:submenu label="Cuotas" icon="ui-icon-calculator">
 								<p:menuitem value="Cargar Cuotas"
 									url="http://www.noticias3d.com" icon="ui-icon-arrowthick-1-n" />
 								<p:menuitem value="Registrar"
-									url="registracuota.xhtml" icon="ui-icon-search" />
+									url="registracuota.xhtml" icon="ui-icon-arrowthick-1-e" />
+								<p:menuitem value="Movimientos"
+									url="movimientoscuotas.xhtml" icon="ui-icon-document" />								
 							</p:submenu>
 							
 							<p:submenu label="Referencias catastrales" icon="ui-icon-script">
