--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -5,16 +5,16 @@
 	xmlns:p="http://primefaces.org/ui">
 					<p:panelMenu style="width:100%">
 						<p:submenu label="Activos">
-							<p:menuitem value="Cargar Activos"
-								url="http://www.noticias3d.com" icon="ui-icon-arrowthick-1-n" />
-							<p:menuitem value="Lista de Activos" url="http://www.google.es"
-								icon="ui-icon-search" />
+							<p:menuitem value="Cargar"
+								url="cargador.xhtml" icon="ui-icon-arrowthick-1-n" />
+							<p:menuitem value="Lista de Activos" 
+								url="listaactivos.xhtml" icon="ui-icon-search" />
 						</p:submenu>
 						<p:submenu label="Gastos">
-							<p:menuitem value="Cargar Gastos" url="http://www.noticias3d.com"
-								icon="ui-icon-arrowthick-1-n" />
-							<p:menuitem value="Lista de Gastos" url="http://www.google.es"
-								icon="ui-icon-search" />
+							<p:menuitem value="Cargar Gastos" 
+								url="cargador.xhtml" icon="ui-icon-arrowthick-1-n" />
+							<p:menuitem value="Lista de Gastos" 
+								url="listaactivos.xhtml" icon="ui-icon-search" />
 						</p:submenu>
 						<p:submenu label="Provisiones">
 							<p:menuitem value="Lista de Provisiones"
@@ -35,7 +35,7 @@
 							
 							<p:submenu label="Cuotas" icon="ui-icon-calculator">
 								<p:menuitem value="Cargar Cuotas"
-									url="http://www.noticias3d.com" icon="ui-icon-arrowthick-1-n" />
+									url="cargador.xhtml" icon="ui-icon-arrowthick-1-n" />
 								<p:menuitem value="Registrar"
 									url="registracuota.xhtml" icon="ui-icon-arrowthick-1-e" />
 								<p:menuitem value="Movimientos"
@@ -43,33 +43,16 @@
 							</p:submenu>
 							
 							<p:submenu label="Referencias catastrales" icon="ui-icon-script">
-								<p:menuitem value="Cargar Referencias"
-									url="http://www.noticias3d.com" icon="ui-icon-arrowthick-1-n" />
+								<p:menuitem value="Cargar"
+									url="cargador.xhtml" icon="ui-icon-arrowthick-1-n" />
 								<p:menuitem value="Registrar"
 									url="registrareferencia.xhtml" icon="ui-icon-search" />
 							</p:submenu>
 							<p:submenu label="Impuestos y tasas" icon="ui-icon-note">
-								<p:menuitem value="Cargar Impuestos"
-									url="http://www.noticias3d.com" icon="ui-icon-arrowthick-1-n" />
+								<p:menuitem value="Cargar"
+									url="cargador.xhtml" icon="ui-icon-arrowthick-1-n" />
 								<p:menuitem value="Registrar"
 									url="registraimpuesto.xhtml" icon="ui-icon-search" />
-							</p:submenu>
-						</p:submenu>
-						<p:submenu label="Ref.">
-							<p:submenu label="Links" icon="ui-icon-extlink">
-								<p:submenu label="PrimeFaces" icon="ui-icon-heart">
-									<p:menuitem value="Home" url="http://www.primefaces.org"
-										icon="ui-icon-home" />
-									<p:menuitem value="Docs"
-										url="http://www.primefaces.org/documentation.html"
-										icon="ui-icon-document" />
-									<p:menuitem value="Download"
-										url="http://www.primefaces.org/downloads.html"
-										icon="ui-icon-arrowthick-1-s" />
-									<p:menuitem value="Support"
-										url="http://www.primefaces.org/support.html"
-										icon="ui-icon-wrench" />
-								</p:submenu>
 							</p:submenu>
 						</p:submenu>
 					</p:panelMenu>
