Modificacion del menu para incluir urls de: activos, gastos, provisiones, referencias e impuestos.

--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -14,11 +14,11 @@
 							<p:menuitem value="Cargar Gastos" 
 								url="cargador.xhtml" icon="ui-icon-arrowthick-1-n" />
 							<p:menuitem value="Lista de Gastos" 
-								url="listaactivos.xhtml" icon="ui-icon-search" />
+								url="listagastos.xhtml" icon="ui-icon-search" />
 						</p:submenu>
 						<p:submenu label="Provisiones">
 							<p:menuitem value="Lista de Provisiones"
-								url="http://www.google.es" icon="ui-icon-search" />
+								url="listaprovisiones.xhtml" icon="ui-icon-search" />
 						</p:submenu>
 
 						<p:submenu label="Comunidades">
