Panel de informacion y botones de acciones implementados en todas las ventanas de actuacion.

--- a/WebContent/listaprovisiones.xhtml
+++ b/WebContent/listaprovisiones.xhtml
@@ -32,7 +32,17 @@
 													<p:commandButton value="Buscar" update="msgs, popup, activos" actionListener="#{GestorActivos.buscaActivos}"/>	
 
 										</h:panelGrid>
-											<p:messages id="msgs"/>
+									</p:fieldset>
+									<p:fieldset legend="Info">
+										<h:panelGrid columns="3" cellpadding="5">
+											<p:commandButton value="Mostrar" onclick="barraInfo.show()" type="button" />
+											<p:commandButton value="Ocultar" onclick="barraInfo.hide()" type="button" />
+											<p:notificationBar position="top" effect="slide" widgetVar="barraInfo" styleClass="top">  
+												<p:messages id="msgs"/>
+											</p:notificationBar>  
+											<p:ajaxStatus onstart="statusDialog.show();" onsuccess="statusDialog.hide();"/>
+											<p:growl id="popup" />
+										</h:panelGrid>
 									</p:fieldset>
 								</h:panelGrid>
 				</p:layoutUnit>
@@ -41,7 +51,6 @@
 				</p:layoutUnit>
 
 				<p:layoutUnit position="center">
-				<p:growl id="popup" />
 
 					<p:panel id="panel">
 						<h:panelGrid columns="1" cellpadding="5">
@@ -67,7 +76,7 @@
 											<p:panel id="panelTablaActivos">
 												<h:panelGrid columns="1" cellpadding="5">
 													<p:contextMenu for="activos">
-														<p:menuitem value="Detalles" update="form:popup" icon="ui-icon-folder-open" actionListener="#{GestorActivos.cargarDetalles}" url="detallesgasto.xhtml"/>
+														<p:menuitem value="Detalles" update="form:popup" icon="ui-icon-folder-open" actionListener="#{GestorActivos.cargarDetalles}" url="detallesprovision.xhtml"/>
 													</p:contextMenu>  
 															
 													<p:dataTable id="activos" var="activo" value="#{GestorActivos.tablaactivos}" rowKey="#{activo.COACES}"  
@@ -216,6 +225,9 @@
 										</h:panelGrid>
 									</p:fieldset>
 					</p:dialog>
+					<p:dialog modal="true" widgetVar="statusDialog" header="Tramitando..." draggable="false" closable="false">  
+						<p:graphicImage value="recursos/loadingBar.gif" />
+					</p:dialog> 
 				</p:layoutUnit>
 			</p:layout>
 		</h:form>
