--- a/WebContent/cargador.xhtml
+++ b/WebContent/cargador.xhtml
@@ -10,8 +10,20 @@
 		<h:form>
 			<p:layout fullPage="true">
 
-				<p:layoutUnit position="north" size="100" header="Informacion">
-					<h:outputText value="Contenido superior." />
+				<p:layoutUnit position="north" size="33%" header="Informacion">
+								<h:panelGrid columns="4" cellpadding="5">
+									<p:fieldset legend="Info">
+										<h:panelGrid columns="3" cellpadding="5">
+											<p:commandButton value="Mostrar" onclick="barraInfo.show()" type="button" />
+											<p:commandButton value="Ocultar" onclick="barraInfo.hide()" type="button" />
+											<p:notificationBar position="top" effect="slide" widgetVar="barraInfo" styleClass="top">  
+												<p:messages id="msgs"/>
+											</p:notificationBar>  
+											<p:ajaxStatus onstart="statusDialog.show();" onsuccess="statusDialog.hide();"/>
+											<p:growl id="popup" />
+										</h:panelGrid>
+									</p:fieldset>
+								</h:panelGrid>
 				</p:layoutUnit>
 
 				<p:layoutUnit position="west" size="20%" header="Menus">
@@ -21,14 +33,13 @@
 				<p:layoutUnit position="center">
 					<p:panel>
 						<h:panelGrid columns="1" cellpadding="5">
-    				<p:fileUpload fileUploadListener="#{GestorCargas.handleFileUpload}" mode="advanced" dragDropSupport="true"  
-            update="messages" allowTypes="/(\.|\/)(txt)$/" />  
-  
-				    <p:growl id="messages" showDetail="true"/>
-						<h:outputText value="resultado: " />
-						<p:inputText id="RES" value="#{GestorCargas.sCampo}" disabled="true" />
+						<p:fileUpload fileUploadListener="#{GestorCargas.handleFileUpload}" mode="advanced" dragDropSupport="true"  
+							update="popup, msgs" allowTypes="/(\.|\/)(txt)$/" />  
 						</h:panelGrid>
 					</p:panel>
+					<p:dialog modal="true" widgetVar="statusDialog" header="Tramitando..." draggable="false" closable="false">  
+						<p:graphicImage value="recursos/loadingBar.gif" />
+					</p:dialog> 
 				</p:layoutUnit>
 			</p:layout>
 		</h:form>
