--- a/WebContent/listaactivos.xhtml
+++ b/WebContent/listaactivos.xhtml
@@ -32,7 +32,17 @@
 													<p:commandButton value="Buscar" update="msgs, popup, activos" actionListener="#{GestorActivos.buscaActivos}"/>	
 													<p:commandButton value="Limpiar Plantilla" update="msgs, popup, panelBuscar" actionListener="#{GestorActivos.limpiarPlantilla}" />	
 										</h:panelGrid>
-											<p:messages id="msgs"/>
+									</p:fieldset>
+									<p:fieldset legend="Info">
+										<h:panelGrid columns="3" cellpadding="5">
+											<p:commandButton value="Mostrar" onclick="barraInfo.show()" type="button" />
+											<p:commandButton value="Ocultar" onclick="barraInfo.hide()" type="button" />
+											<p:notificationBar position="top" effect="slide" widgetVar="barraInfo" styleClass="top">  
+												<p:messages id="msgs"/>
+											</p:notificationBar>  
+											<p:ajaxStatus onstart="statusDialog.show();" onsuccess="statusDialog.hide();"/>
+											<p:growl id="popup" />
+										</h:panelGrid>
 									</p:fieldset>
 								</h:panelGrid>
 				</p:layoutUnit>
@@ -41,8 +51,6 @@
 				</p:layoutUnit>
 
 				<p:layoutUnit position="center">
-				<p:growl id="popup" />
-
 					<p:panel id="panel">
 						<h:panelGrid columns="1" cellpadding="5">
 									<p:fieldset legend="Criterios de Busqueda">
@@ -88,7 +96,7 @@
 											<p:panel id="panelTablaActivos">
 												<h:panelGrid columns="1" cellpadding="5">
 													<p:contextMenu for="activos">
-														<p:menuitem value="Detalles" update="form:popup" icon="ui-icon-folder-open" actionListener="#{GestorActivos.cargarDetalles}" url="gestionactivos.xhtml"/>
+														<p:menuitem value="Detalles" update="form:popup" icon="ui-icon-folder-open" actionListener="#{GestorActivos.cargarDetalles}" url="detallesactivo.xhtml"/>
 														<p:menuitem value="Comunidad" update="form:popup" icon="ui-icon-home" actionListener="#{GestorActivos.cargarComunidad}" url="movimientoscomunidades.xhtml"/>
 														<p:menuitem value="Cuotas" update="form:popup" icon="ui-icon-calculator" actionListener="#{GestorActivos.cargarCuota}" url="movimientoscuotas.xhtml"/>
 														<p:menuitem value="Referencia Catastral" update="form:popup" icon="ui-icon-script" actionListener="#{GestorActivos.cargarReferencia}" url="index.xhtml"/>
@@ -142,6 +150,9 @@
 									</p:fieldset>
 								</h:panelGrid>
 							</p:panel>
+					<p:dialog modal="true" widgetVar="statusDialog" header="Tramitando..." draggable="false" closable="false">  
+						<p:graphicImage value="recursos/loadingBar.gif" />
+					</p:dialog> 
 				</p:layoutUnit>
 			</p:layout>
 		</h:form>
