--- a/WebContent/movimientosimpuestos.xhtml
+++ b/WebContent/movimientosimpuestos.xhtml
@@ -46,17 +46,26 @@
 											<p:commandButton value="Limpiar Plantilla" update="panel" actionListener="#{GestorMovimientosCuotas.limpiarPlantillaCuotas}" oncomplete="dlgTabla.hide(); dlgBuscar.hide()"/>
 											<p:commandButton value="Registrar" update="panel, popup, msgs" actionListener="#{GestorMovimientosCuotas.registraMovimiento}"/>
 										</h:panelGrid>
-											<p:messages id="msgs"/>
+									</p:fieldset>
+									<p:fieldset legend="Info">
+										<h:panelGrid columns="3" cellpadding="5">
+											<p:commandButton value="Mostrar" onclick="barraInfo.show()" type="button" />
+											<p:commandButton value="Ocultar" onclick="barraInfo.hide()" type="button" />
+											<p:notificationBar position="top" effect="slide" widgetVar="barraInfo" styleClass="top">  
+												<p:messages id="msgs"/>
+											</p:notificationBar>  
+											<p:ajaxStatus onstart="statusDialog.show();" onsuccess="statusDialog.hide();"/>
+											<p:growl id="popup" />
+										</h:panelGrid>
 									</p:fieldset>
 								</h:panelGrid>
 				</p:layoutUnit>
+
 				<p:layoutUnit position="west" size="20%" header="Menus">
 					<ui:include src="menu.xhtml"/>
 				</p:layoutUnit>
 
 				<p:layoutUnit position="center">
-				<p:growl id="popup" />
-
 					<p:panel id="panel">
 						<h:panelGrid columns="1" cellpadding="5">
 									<p:panel >
@@ -316,6 +325,9 @@
 										</h:panelGrid>
 									</p:fieldset>
 					</p:dialog>
+					<p:dialog modal="true" widgetVar="statusDialog" header="Tramitando..." draggable="false" closable="false">  
+						<p:graphicImage value="recursos/loadingBar.gif" />
+					</p:dialog> 
 				</p:layoutUnit>
 			</p:layout>
 		</h:form>
