--- a/WebContent/gastos.xhtml
+++ b/WebContent/gastos.xhtml
@@ -9,7 +9,7 @@
 		<h:form>
 			<p:layout fullPage="true">
 
-				<p:layoutUnit position="north" size="100" header="Informacion">
+				<p:layoutUnit position="north" size="100" header="Gastos">
 					<h:outputText value="North unit content." />
 				</p:layoutUnit>
 
