--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -10,7 +10,7 @@
 		<h:form>
 			<p:layout fullPage="true">
 
-				<p:layoutUnit position="north" size="100" header="Informacion">
+				<p:layoutUnit position="north" size="33%" header="Portal Provisiones">
 					<h:outputText value="Contenido superior." />
 				</p:layoutUnit>
 
