--- a/WebContent/movimientoscomunidades.xhtml
+++ b/WebContent/movimientoscomunidades.xhtml
@@ -10,7 +10,7 @@
 		<h:form>
 			<p:layout fullPage="true">
 
-				<p:layoutUnit position="north" size="33%" header="Modificar Comunidad">
+				<p:layoutUnit position="north" size="33%" header="Modificar Comunidades">
 
  
 								<h:panelGrid columns="4" cellpadding="5">
