--- a/WebContent/registrareferencia.xhtml
+++ b/WebContent/registrareferencia.xhtml
@@ -10,7 +10,7 @@
 		<h:form>
 			<p:layout fullPage="true">
 
-				<p:layoutUnit position="north" size="33%" header="Alta Comunidad">
+				<p:layoutUnit position="north" size="33%" header="Alta Referencia Catastral">
 
 	
 								<h:panelGrid columns="2" cellpadding="5">
