--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -47,12 +47,16 @@
 									url="cargador.xhtml" icon="ui-icon-arrowthick-1-n" />
 								<p:menuitem value="Registrar"
 									url="registrareferencia.xhtml" icon="ui-icon-search" />
+								<p:menuitem value="Movimientos"
+									url="movimientosreferencias.xhtml" icon="ui-icon-document" />	
 							</p:submenu>
 							<p:submenu label="Impuestos y tasas" icon="ui-icon-note">
 								<p:menuitem value="Cargar"
 									url="cargador.xhtml" icon="ui-icon-arrowthick-1-n" />
 								<p:menuitem value="Registrar"
 									url="registraimpuesto.xhtml" icon="ui-icon-search" />
+								<p:menuitem value="Movimientos"
+									url="movimientosreferencias.xhtml" icon="ui-icon-document" />	
 							</p:submenu>
 						</p:submenu>
 					</p:panelMenu>
