--- a/WebContent/movimientosreferencias.xhtml
+++ b/WebContent/movimientosreferencias.xhtml
@@ -10,7 +10,7 @@
 		<h:form id="form" onkeypress="return event.keyCode != 13">
 			<p:layout fullPage="true">
 
-				<p:layoutUnit position="north" size="33%" header="Alta Comunidad">
+				<p:layoutUnit position="north" size="33%" header="Modificar Referencias Catastrales">
 
  
 								<h:panelGrid columns="3" cellpadding="5">
