--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -46,7 +46,7 @@
 								<p:menuitem value="Cargar"
 									url="cargador.xhtml" icon="ui-icon-arrowthick-1-n" />
 								<p:menuitem value="Registrar"
-									url="registrareferencia.xhtml" icon="ui-icon-search" />
+									url="registrareferencia.xhtml" icon="ui-icon-arrowthick-1-e" />
 								<p:menuitem value="Movimientos"
 									url="movimientosreferencias.xhtml" icon="ui-icon-document" />	
 							</p:submenu>
@@ -54,7 +54,7 @@
 								<p:menuitem value="Cargar"
 									url="cargador.xhtml" icon="ui-icon-arrowthick-1-n" />
 								<p:menuitem value="Registrar"
-									url="registraimpuesto.xhtml" icon="ui-icon-search" />
+									url="registraimpuesto.xhtml" icon="ui-icon-arrowthick-1-e" />
 								<p:menuitem value="Movimientos"
 									url="movimientosreferencias.xhtml" icon="ui-icon-document" />	
 							</p:submenu>
