--- a/WebContent/registrareferencia.xhtml
+++ b/WebContent/registrareferencia.xhtml
@@ -13,7 +13,7 @@
 				<p:layoutUnit position="north" size="33%" header="Alta Referencia Catastral">
 
 	
-								<h:panelGrid columns="2" cellpadding="5">
+								<h:panelGrid columns="3" cellpadding="5">
 									<p:panel>
 										<h:panelGrid columns="2" cellpadding="5">
 
@@ -25,6 +25,12 @@
 
 										</h:panelGrid>
 									</p:panel>
+									<p:fieldset legend="Acciones">
+										<h:panelGrid columns="3" cellpadding="5">
+											<p:commandButton value="Limpiar Plantilla" type="reset" />
+											<p:commandButton value="Registrar Datos" update="panel" actionListener="#{GestorComunidades.realizaAlta}" />
+										</h:panelGrid>
+									</p:fieldset>
 									<p:fieldset legend="Info">
 										<h:panelGrid columns="3" cellpadding="5">
 											<p:commandButton value="Mostrar" onclick="barraInfo.show()" type="button" />
